--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
+    "path": "^0.12.7",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {},
